# vybe

./: Cargo.toml  README.md
crates/irys_editor/: Cargo.toml
crates/irys_editor/src/: app.rs  app_state.rs  designer.rs  main.rs  main_egui.rs  message.rs  state.rs  vb_syntax.rs
crates/irys_editor/src/components/: code_editor.rs  form_designer.rs  menu_bar.rs  mod.rs  project_explorer.rs  project_properties_dialog.rs  properties_panel.rs  resource_editor.rs  runtime_panel.rs  toolbar.rs  toolbox.rs
crates/irys_editor/src/views/: code_editor.rs  code_editor_old.rs  designer.rs  designer_old.rs  menu.rs  menubar.rs  menubar_old.rs  mod.rs  project_explorer.rs  properties.rs  properties_old.rs  toolbox.rs  toolbox_old.rs
crates/irys_editor/tests/: runtime_event_dispatch_test.rs
crates/irys_forms/: Cargo.toml
crates/irys_forms/src/: control.rs  events.rs  form.rs
crates/irys_forms/src/serialization/: designer_codegen.rs  designer_parser.rs  json.rs
crates/irys_forms/tests/: repro_event_generation.rs
crates/irys_project/: Cargo.toml
crates/irys_project/src/: classicforms.rs  lib.rs  project.rs  resources.rs  serialization.rs  winforms.rs
crates/irys_project/tests/: project_load_test.rs  tictactoe_load_test.rs
crates/irys_runtime/: Cargo.toml
crates/irys_runtime/examples/: parse_test.rs
crates/irys_runtime/src/: collections.rs  data_access.rs  evaluator.rs  event_system.rs  file_io.rs  interpreter.rs  lib.rs  std_lib.rs  value.rs
crates/irys_runtime/src/builtins/: array_fns.rs  console_fns.rs  conversion_fns.rs  datetime_fns.rs  dialogs.rs  file_fns.rs  info_fns.rs  math_fns.rs  misc_fns.rs  mod.rs  msgbox.rs  string_fns.rs
crates/irys_runtime/tests/: all_controls_complete_test.rs  arrays_redim_test.rs  async_test.rs  bitwise_test.rs  builtins_test.rs  byref_test.rs  classes_test.rs  collections_test.rs  compound_assign_test.rs  controlflow_misc_test.rs  data_forms_test.rs  date_test.rs  events_comprehensive_test.rs  file_io_test.rs  functions_test.rs  inheritance_test.rs  interpolated_strings_test.rs  lambda_test.rs  legacy_control_test.rs  like_typeof_is_test.rs  loop_controlflow_test.rs  math_builtins_test.rs  namespaces_test.rs  new_controls_full_test.rs  new_controls_test.rs  object_event_test.rs  operator_precedence_test.rs  repro_not_unary.rs  repro_runtime_lookup.rs  repro_tictactoe_full.rs  scoping_test.rs  select_test.rs  strings_adv_test.rs  strings_test.rs  test_null_obj_pass.rs  type_coercion_test.rs  types_test.rs  winforms_features_test.rs
crates/irys_ui/: Cargo.toml
crates/irys_ui/src/: runner.rs  runtime_panel.rs
crates/vybe_cli/: Cargo.toml
crates/vybe_editor/: Cargo.toml  check_config.rs
crates/vybe_editor/src/: app_state.rs  main.rs
crates/vybe_editor/src/components/: code_editor.rs  form_designer.rs  menu_bar.rs  project_properties_dialog.rs  properties_panel.rs  resource_editor.rs  runtime_panel.rs  toolbar.rs  toolbox.rs
crates/vybe_editor/tests/: runtime_event_dispatch_test.rs
crates/vybe_forms/: Cargo.toml
crates/vybe_forms/src/: control.rs  events.rs  form.rs  lib.rs  properties.rs
crates/vybe_forms/src/serialization/: designer_codegen.rs  designer_parser.rs  mod.rs
crates/vybe_forms/tests/: designer_hardening_test.rs  repro_event_generation.rs  test_nonvisual_types.rs  test_roundtrip.rs
crates/vybe_parser/: Cargo.toml
crates/vybe_project/: Cargo.toml
crates/vybe_project/src/: encoding.rs  errors.rs  file_format.rs  project.rs  resources.rs  serialization.rs  winforms.rs
crates/vybe_project/tests/: project_load_test.rs  resx_compat_test.rs  tictactoe_load_test.rs
crates/vybe_runtime/: Cargo.toml
crates/vybe_runtime/examples/: parse_test.rs
crates/vybe_runtime/src/: collections.rs  data_access.rs  environment.rs  evaluator.rs  event_system.rs  file_io.rs  interpreter.rs  lib.rs  std_lib.rs  value.rs
crates/vybe_runtime/src/builtins/: array_fns.rs  concurrent_collections.rs  conversion_fns.rs  cryptography_fns.rs  datetime_fns.rs  dialogs.rs  drawing_fns.rs  file_fns.rs  financial_fns.rs  info_fns.rs  interaction_fns.rs  misc_fns.rs  mod.rs  networking.rs  string_fns.rs  text_fns.rs  xml.rs
crates/vybe_runtime/tests/: all_controls_complete_test.rs  array_test.rs  arrays_redim_test.rs  async_test.rs  bitwise_test.rs  builtins_test.rs  byref_test.rs  classes_test.rs  collections_test.rs  compound_assign_test.rs  constants_test.rs  controlflow_misc_test.rs  data_forms_test.rs  date_test.rs  events_comprehensive_test.rs  extension_methods_test.rs  file_io_test.rs  foreach_iteration_test.rs  functions_test.rs  inheritance_test.rs  interpolated_strings_test.rs  lambda_test.rs  legacy_control_test.rs  like_typeof_is_test.rs  linq_test.rs  loop_controlflow_test.rs  math_builtins_test.rs  misc_gaps_test.rs  namespaces_test.rs  new_controls_extended_test.rs  new_controls_full_test.rs  new_controls_test.rs  new_functions_test.rs  object_event_test.rs  operator_precedence_test.rs  repro_not_unary.rs  repro_runtime_lookup.rs  runtime_events_test.rs  runtime_system_test.rs  scoping_test.rs  (+9 more)
crates/vybe_ui/: Cargo.toml
crates/vybe_ui/src/: lib.rs  runner.rs  runtime_panel.rs
examples/Dialogs/: Dialogs.vbproj  Form1.Designer.vb  Form1.vb
tests/: repro_byref.vb  test_all_controls_complete.vb  test_arraylist_complete.vb  test_arrays.vb  test_async.vb  test_bitwise.vb  test_builtins.vb  test_collection_keys.vb  test_collections.vb  test_constants.vb  test_data_access.vb  test_data_forms.vb  test_data_min.vb  test_date.vb  test_declarations.vb  test_extension_methods.vb  test_file_io.vb  test_foreach_iteration.vb  test_goto_label_onerror.vb  test_inheritance.vb  test_interpolated_strings.vb  test_lambda.vb  test_linq.vb  test_linq_extended.vb  test_multidim_arrays.vb  test_namespaces.vb  test_new_controls.vb  test_new_controls_full.vb  test_new_features.vb  test_new_functions.vb  test_operator_precedence.vb  test_paramarray.vb  test_select_case.vb  test_static_locals.vb  test_string_escapes.vb  test_stringbuilder.vb  test_strings_adv.vb  test_system_features.vb  test_type_gaps.vb  test_types.vb  (+2 more)
(+78 files in other folders)
