[workspace]
resolver = "2"
members = [
    "crates/irys_parser",
    "crates/irys_runtime",
    "crates/irys_forms",
    "crates/irys_editor",
    "crates/irys_project",
    "crates/irys_cli",
    "crates/irys_ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["irys Rust Team"]
license = "MIT"

[workspace.dependencies]
# Parser dependencies
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "1.0"

# Dialog libraries
rfd = "0.14"

# Internal crates
irys_parser = { path = "crates/irys_parser" }
irys_runtime = { path = "crates/irys_runtime" }
irys_forms = { path = "crates/irys_forms" }
irys_project = { path = "crates/irys_project" }
irys_ui = { path = "crates/irys_ui" }
