[workspace]
resolver = "2"
members = [
    "crates/vybe_parser",
    "crates/vybe_runtime",
    "crates/vybe_forms",
    "crates/vybe_editor",
    "crates/vybe_project",
    "crates/vybe_cli",
    "crates/vybe_ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["vybe Rust Team"]
license = "MIT"

[workspace.dependencies]
# Parser dependencies
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "1.0"

# Dialog libraries
rfd = "0.14"

# Internal crates
vybe_parser = { path = "crates/vybe_parser" }
vybe_runtime = { path = "crates/vybe_runtime" }
vybe_forms = { path = "crates/vybe_forms" }
vybe_project = { path = "crates/vybe_project" }
vybe_ui = { path = "crates/vybe_ui" }
