[package]
name = "irys_editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "irys_editor"
path = "src/main.rs"

[dependencies]
irys_parser = { workspace = true }
irys_runtime = { workspace = true }
irys_forms = { workspace = true }
irys_project = { workspace = true }
irys_ui = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

# Dioxus for GUI
dioxus = { version = "0.7.3", features = ["desktop"] }
serde_json = "1.0"
rfd = "0.14"
