[package]
name = "irys_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
irys_parser = { workspace = true }
irys_runtime = { workspace = true }
irys_forms = { workspace = true }
irys_project = { workspace = true }
serde = { workspace = true }

# Dioxus for GUI rendering
dioxus = { version = "0.7.3", features = ["desktop"] }

# Tokio for async timers in console polling
tokio = { version = "1", features = ["time"] }
