[package]
name = "vybe_project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vybe_forms = { workspace = true }
vybe_parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
quick-xml = { version = "0.31", features = ["serialize"] }
