[package]
name = "vybe_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vybe_parser = { workspace = true }
vybe_forms = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = "0.4"
rfd = { workspace = true }
regex = "1.10"
serde_json = "1.0"
quick-xml = "0.31"
md5 = "0.7"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "any"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }

[dev-dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }

[[example]]
name = "parse_test"
path = "examples/parse_test.rs"
